# physicore-hybrid-mpc

./: .env.example  .gitignore  App.tsx  Dockerfile  LICENSE  README.md  balancing_bot_robot.yaml  cable_driven_robot.yaml  docker-compose.yml  dual_arm_robot.yaml  exoskeleton_robot.yaml  firebase-applet-config.json  firebase-blueprint.json  firestore.rules  index.css  index.html  index.tsx  install.py  install.sh  metadata.json  mobile_manipulator_robot.yaml  package-lock.json  package.json  px4_drone_robot.yaml  pyproject.toml  railway.json  requirements.txt  rocket_robot.yaml  ros2_arm_robot.yaml  setup.py  types.ts
.github/workflows/: ci.yml  publish.yml  release.yml
components/: ChatInterface.tsx  Dashboard.tsx  ParameterEditor.tsx  SimulationCanvas.tsx
demos/balancing_bot/: run.py
demos/ground_rover/: run.py
demos/legged_robot/: run.py
demos/manipulator_arm/: run.py
demos/quadrotor/: run.py
demos/rocket/: run.py
docs/: _base.css  _nav.js  api-reference.html  architecture.html  deployment.html  index.html  platforms.html  plugin-sdk.html  quickstart.html  robot-loading.html  safety.html
examples/: balancing_bot_sim.py  custom_plugin.py  fleet_two_robots.py  full_pipeline.py  load_any_urdf.py  quadrotor_sim.py
firmware/balancing_bot/: physicore_active.ino
migrated_prompt_history/: prompt_2026-02-17T12:20:46.255Z.json
physicore/: README.md  __init__.py  __init__connect.py  cli.py  extensions.py
physicore-bridge/: physicore_bridge.py  requirements.txt
physicore/api/: README.md  audit.py  auth.py  metering.py  org.py  server.py
physicore/bridge/: physicore_bridge.py  requirements.txt
physicore/core/: cem_jax.py  contact_lcp.py  engine.py  ensemble_batched.py  estimator.py  extra_dynamics.py  fleet.py  latency.py  performance_config.py  registry.py  robot_config.py  rt_loop.py  rt_thread.py  safety.py  sensor_filter.py  telemetry.py  transfer.py  urdf_loader.py
physicore/data/: __init__.py  telemetry_store.py
scripts/: healthcheck.sh  start.sh
services/: diagnostics.ts  failureDB.ts  geminiService.ts  learnedDynamics.ts  optimizer.ts  physicsLogic.ts
src/: firebase.ts  types.ts
tests/: test_engine.py  test_fleet.py  test_launch_readiness.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_round1.py  test_round2.py
(+42 files in other folders)
